# Acgs-Swarm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  MIGRATION.md  README.md  SECURITY.md  pyproject.toml  references.bib
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  release_regression.yml
.github/workflows/: ci.yml  publish.yml  security.yml  tla-check.yml  verify-cites.yml
docs/: AGENTS.md  AGENT_SKILL_AUDIT.md  RUNTIME_OPTIMIZATION_REPORT.md  maci_dp_protocol.md  modularization-roadmap.md
docs/internal/: claims_map.md  figures_audit.md  rust_core_protocol_adr.md  rust_protocol_launch_checklist.md  swebench_local_dockerless.md
examples/: AGENTS.md  constitution.yaml
examples/governed-handoff/: task.md
examples/governed-handoff/.acgs/: constitution.yaml  swarm.yaml
paper/: AGENTS.md  README.md  constitutional_swarm_paper.md
papers/: AGENTS.md  Makefile
papers/iclr2027/: AGENTS.md  iclr2025_conference.cls  main.tex  references.bib
papers/iclr2027/figures/: birkhoff_collapse.tex  variance_comparison.tex
papers/iclr2027/sections/: abstract.tex  conclusion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
papers/ndss2027/: AGENTS.md  TUptm.fd  main.tex  references.bib
papers/ndss2027/sections/: abstract.tex  conclusion.tex  evaluation.tex  introduction.tex  protocol.tex  security_analysis.tex
scripts/: AGENTS.md  benchmark_coverage.py  convert_swarm_output_to_swebench_predictions.py  eval_swe_bench_synthetic.py  eval_trust_convergence.py  generate_rust_protocol_fixtures.py  generate_security_report.py  reproduce_paper_claims.py  run_mc_swarm.py  run_official_swarm_swebench.py  run_swe_bench_lite.py  run_swe_bench_swarm_lite.py  testnet_deploy.py  verify_citations.py
specs/: .gitignore  AGENTS.md  MeshMC.cfg  MeshMC.tla  README.md  constitution_reconfig.cfg  constitution_reconfig.tla  mesh.tla
src/: AGENTS.md
src/constitutional_swarm/: AGENTS.md  __init__.py  agency_bridge.py  artifact.py  compiler.py  constants.py  debate_resolver.py  dna.py  epoch_reconfig.py  evolution_log.py  federated_bridge.py  gossip_protocol.py  governed_handoff.py  latent_dna.py  mac_acgs_loop.py  manifold.py  merkle_crdt.py  mesh.py  mesh_crypto.py  mesh_settlement.py  mesh_types.py  privacy_accountant.py  private_vote.py  protocol.py  quorum_certificate.py  remote_vote_transport.py  settlement_store.py  spectral_sphere.py  swarm.py  swarm_ode.py  validator_set.py  violation_subspace.py
src/constitutional_swarm/bittensor/: AGENTS.md  arweave_audit_log.py  authenticity_detector.py  axon_server.py  came_coordinator.py  compliance_certificate.py  constitution_sync.py  emission_calculator.py  governance_coordinator.py  precedent_store.py  tier_manager.py  validator.py
src/constitutional_swarm/mesh/: __init__.py  core.py  exceptions.py  peers.py  settlement.py  voting.py
src/constitutional_swarm/remote_vote_transport/: __init__.py  peer.py  protocol.py  transport.py
src/constitutional_swarm/swe_bench/: AGENTS.md  __init__.py  agent.py  claude_agent.py  codex_agent.py  harness.py  local_harness.py  swarm_coordinator.py
tests/: AGENTS.md  test_agency_bridge.py  test_arweave_audit_log.py  test_arweave_crash_mid_phase1.py  test_authenticity_detector.py  test_axon_dendrite_coverage.py  test_benchmark_coverage.py  test_bittensor_e2e.py  test_bittensor_protocol.py  test_bodes_subspace_hook.py  test_bodes_subspace_leace_hook.py  test_breakthrough_modules.py  test_codex_swe_bench_agent.py  test_compiler.py  test_compliance_certificate.py  test_constitution_sync_governed.py  test_constitutional_swarm.py  test_convert_swarm_output_to_swebench_predictions.py  test_cross_package_contracts.py  test_dag_coordinator_deep.py  test_emission_calculator.py  test_epoch_reconfig.py  test_evolution_log.py  test_evolution_log_fuzz.py  test_evolutionary_systems.py  test_gossip_protocol.py  test_governed_handoff.py  test_harness_codex_coverage.py  test_import_boundaries.py  test_integration_acgs_lite.py  test_kill_switch.py  test_latent_dna.py  test_local_harness_coverage.py  test_local_swe_bench_harness.py  test_manifold.py  test_manifold_degeneration.py  test_merkle_crdt.py  test_merkle_crdt_fuzz.py  test_mesh.py  test_microgap_round3_coverage.py  (+30 more)
tests/fixtures/: snca_constitution.yaml
tests/fixtures/rust_protocol/: content_hashes.json  manifest.json  mesh_proof.json  remote_vote_request.json  replay_rejection.json  settlement_record.json  spectral_sphere_snapshot.json  validation_result.json  vote_payload.json
tests/security/: AGENTS.md  test_finding_001_unauth_ws.py
