[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.46.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-swarm"
version = "0.1.1"
description = "Constitutional Swarm Mesh — orchestrator-free multi-agent governance via embedded Agent DNA"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{name = "ACGS Team", email = "hello@acgs.dev"}]
dependencies = ["acgs-lite>=2.5"]

[project.urls]
Homepage = "https://acgs.ai"
Documentation = "https://github.com/dislovelhl/constitutional-swarm"
Repository = "https://github.com/dislovelhl/constitutional-swarm"
Issues = "https://github.com/dislovelhl/constitutional-swarm/issues"
Changelog = "https://github.com/dislovelhl/constitutional-swarm/releases"
PyPI = "https://pypi.org/project/constitutional-swarm/"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0"]
bittensor = ["bittensor>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (800+ agent scale)",
  "integration: marks cross-package integration tests",
  "contract: marks stable cross-package contract tests"
]
