[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-swarm"
version = "0.2.0"
description = "Constitutional Swarm Mesh — orchestrator-free multi-agent governance via embedded Agent DNA"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{name = "ACGS Team", email = "hello@acgs.dev"}]
# acgs-lite >=2.8.1 required: top-level exports of constitution lifecycle
# symbols (CaseManager, SpotCheckAuditor, TrustScoreManager, ValidatorSelector,
# and related). Shipped in acgs-lite v2.8.1 via PRs #9 and #10.
dependencies = ["acgs-lite>=2.8.1", "cryptography>=44.0.2", "numpy>=1.24"]

[project.urls]
Homepage = "https://acgs.ai"
Documentation = "https://github.com/dislovelhl/Acgs-Swarm#readme"
Repository = "https://github.com/dislovelhl/Acgs-Swarm"
Issues = "https://github.com/dislovelhl/Acgs-Swarm/issues"
Changelog = "https://github.com/dislovelhl/Acgs-Swarm/releases"
PyPI = "https://pypi.org/project/constitutional-swarm/"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.4"]
bittensor = ["bittensor>=7.0"]
transport = ["websockets>=12.0"]
# research: MCFS research stack (latent DNA steering, swarm ODE dynamics)
research = ["torch>=2.0", "transformers>=4.40"]
# deprecated alias — use research instead
latent = ["constitutional-swarm[research]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["constitutional_swarm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (800+ agent scale)",
  "integration: marks cross-package integration tests",
  "contract: marks stable cross-package contract tests",
  "research: marks empirical research proof tests (expected to fail; excluded from release gating)",
  "bittensor: marks tests that exercise the Bittensor subnet integration (excluded from dev matrix)",
  "benchmark: marks performance benchmark tests",
  "e2e: marks end-to-end tests requiring live external services",
  "security: marks security regression tests (one test per audit finding — report auto-generated)"
]
